bugfix/navbar fix gap

--- a/src/components/04-Templates/Navbar/Navbar.module.scss
+++ b/src/components/04-Templates/Navbar/Navbar.module.scss
@@ -69,7 +69,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    gap: 3rem;
+    gap: 1.5rem;
     opacity: 0;
     transition: .25s ease-in-out;
 
